[Manjunath S B] Added :Refactored code and proper naming convention followed
