# src/controllers/batch.controller.js
@@ -2,38 +2,37 @@ import HttpStatus from 'http-status-codes';
 import * as BatchService from '../services/batch.service';
 
 /**
- * Controller to get all Batch  available
+ * Controller to get all Batches
  * @param  {object} req - request object
  * @param {object} res - response object
  * @param {Function} next
  */
 export const getAll = async (req, res, next) => {
-    try {
-      const data = await BatchService.getAll();
-      res.status(HttpStatus.OK).json({
-        code: HttpStatus.OK,
-        data: data,
-        message: 'All batch  fetched successfully'
-      });
-    } catch (error) {
-      next(error);
-    }
-  };
-
+  try {
+    const data = await BatchService.getAll();
+    res.status(HttpStatus.OK).json({
+      code: HttpStatus.OK,
+      data: data,
+      message: 'All batches fetched successfully'
+    });
+  } catch (error) {
+    next(error);
+  }
+};
 
 /**
- * Controller to create a new Batch 
+ * Controller to create a new Batch
  * @param  {object} req - request object
  * @param {object} res - response object
  * @param {Function} next
  */
 export const createNewBatch = async (req, res, next) => {
   try {
-    const data = await BatchService.createNewBatch(req.body.userId,req.body);
+    const data = await BatchService.createNewBatch(req.body);
     res.status(HttpStatus.CREATED).json({
       code: HttpStatus.CREATED,
       data: data,
-      message: 'Batches Created Successfully'
+      message: 'Batch Created Successfully'
     });
   } catch (error) {
     res.status(HttpStatus.BAD_REQUEST).json({
@@ -43,18 +42,15 @@ export const createNewBatch = async (req, res, next) => {
   }
 };
 
-
-
 /**
- * Controller for add new enginees
+ * Controller for add new engineer
  * @param  {object} req - request object
  * @param {object} res - response object
  * @param {Function} next
  * */
 export const addNewEngineer = async (req, res, next) => {
   try {
-    const data = await BatchService.addNewEngineer(req);
-    console.log('engg controller --->', data);
+    const data = await BatchService.addNewEngineer(req.params.batchId,req.body);
     res.status(HttpStatus.CREATED).json({
       code: HttpStatus.CREATED,
       data: data,
@@ -69,3 +65,21 @@ export const addNewEngineer = async (req, res, next) => {
 };
 
 
+/**
+ * Controller to get enginner
+ * @param  {object} req - request object
+ * @param {object} res - response object
+ * @param {Function} next
+ */
+export const getEngineer= async (req, res, next) => {
+  try {
+    const data = await BatchService.getEngineer(req.params.cicId);
+    res.status(HttpStatus.OK).json({
+      code: HttpStatus.OK,
+      data: data,
+      message: 'Engineer details fetched successfully'
+    });
+  } catch (error) {
+    next(error);
+  }
+};
