# src/controllers/ticket.controller.js
@@ -9,10 +9,10 @@ import * as ticketService from '../services/ticket.service';
  * @param {object} res - response object
  * @param {Function} next
  */
-export const getSingleTicket = async (req, res, next) => {
+export const getTicket = async (req, res, next) => {
   console.log("get into controller");
   try {
-    const data = await ticketService.getSingleTicket(req.params.Ticket_Id);
+    const data = await ticketService.getTicket(req.params.Ticket_Id);
     console.log("data ===--->",data);
     res.status(HttpStatus.OK).json({
       code: HttpStatus.OK,
@@ -30,9 +30,9 @@ export const getSingleTicket = async (req, res, next) => {
  * @param {object} res - response object
  * @param {Function} next
  */
-export const raiseNewTicket = async (req, res, next) => {
+export const raiseTicket = async (req, res, next) => {
     try {
-      const data = await ticketService.raiseNewTicket(req);
+      const data = await ticketService.raiseTicket(req.params.cicId,req.body,req.file);
       res.status(HttpStatus.CREATED).json({
         code: HttpStatus.CREATED,
         data: data,
@@ -55,7 +55,7 @@ export const raiseNewTicket = async (req, res, next) => {
 export const followUp = async (req, res, next) => {
   console.log("inside controller ");
   try {
-    const data = await ticketService.followUp(req);
+    const data = await ticketService.followUp(req.params.ticketId,req.body);
     res.status(HttpStatus.OK).json({
       code: HttpStatus.OK,
       data: data,
