# src/routes/batch.route.js
@@ -2,8 +2,10 @@ import express from 'express';
 import * as batchController from '../controllers/batch.controller';
 import { newBatchValidator } from '../validators/batch.validator';
 import { userAuth } from '../middlewares/auth.middleware';
-const router = express.Router();
 import { roleCheck } from '../middlewares/roleCheck.middleware';
+import { newEngineerValidator } from '../validators/newEngineerValidator';
+const router = express.Router();
+
 
 //route to all batches
 router.get('', userAuth, batchController.getAll);
@@ -12,8 +14,9 @@ router.get('', userAuth, batchController.getAll);
 router.post('',newBatchValidator,userAuth,roleCheck,batchController.createNewBatch);
 
 //route for  add new Engineer
-router.put('/addEngineers',userAuth,roleCheck,batchController.addNewEngineer);
+router.put('/addEngineers/:batchId',newEngineerValidator,userAuth,roleCheck,batchController.addNewEngineer);
 
-
+//route to all batches
+router.get('/getEngineer/:cicId', userAuth, batchController.getEngineer);
 
 export default router;
