# src/validators/newEngineerValidator.js
@@ -1,0 +1,20 @@
+import Joi from '@hapi/joi';
+import HttpStatus from 'http-status-codes';
+
+export const newEngineerValidator = (req, res, next) => {
+  const schema = Joi.object({
+    fullName: Joi.string().required(),
+    phoneNumber: Joi.number().min(10).required(),
+    email: Joi.string().email().required(),
+    status: Joi.string().optional(),
+  });
+  const { error, value } = schema.validate(req.body);
+  if (error) {
+    res.status(HttpStatus.BAD_REQUEST).json({
+      code: HttpStatus.BAD_REQUEST,
+      message: `${error}`
+    });
+  } else {
+    next();
+  }
+};
